@@ -9,18 +9,23 @@
 #include <sys/errno.h>
 #include <unistd.h>
 #include <signal.h>
-#include "inthash.h"
 #include "check_syscalls.h"
+#ifdef __linux__
+#include <malloc.h>
+#endif /* __linux__ */
 
 //#define DEBUG_IO
 
 char *unread = NULL;
 int64_t unread_size = 0;
+FILE *syscall_logfile = NULL;
+
+#define SL ((syscall_logfile) ? syscall_logfile : stderr)
 
 void system_error(char *errmsg) {
-  fprintf(stderr, "[Error] %s\n", errmsg);
-  perror("[Error] Reason");
-  exit(1);
+  fprintf(SL, "[Error] %s\n", errmsg);
+  fprintf(SL, "[Error] Reason: %s\n", strerror(errno));
+  exit(EXIT_FAILURE);
 }
 
 pid_t check_waitpid(pid_t pid) {
@@ -39,15 +44,15 @@ FILE *check_fopen(char *filename, char *mode) {
   FILE *res = fopen(filename, mode);
   if (res == NULL) {
     if (mode[0] == 'w')
-      fprintf(stderr, "[Error] Failed to open file %s for writing!\n", filename);
+      fprintf(SL, "[Error] Failed to open file %s for writing!\n", filename);
     else if (mode[0] == 'a')
-      fprintf(stderr, "[Error] Failed to open file %s for appending!\n", filename);
+      fprintf(SL, "[Error] Failed to open file %s for appending!\n", filename);
     else
-      fprintf(stderr, "[Error] Failed to open file %s for reading!\n", filename);
-    exit(1);
+      fprintf(SL, "[Error] Failed to open file %s for reading!\n", filename);
+    exit(EXIT_FAILURE);
   }
 #ifdef DEBUG_IO
-  fprintf(stderr, "[Note] Opened file %s with mode '%s' in fileno %d.\n", 
+  fprintf(SL, "[Note] Opened file %s with mode '%s' in fileno %d.\n", 
 	  filename, mode, fileno(res));
 #endif /* DEBUG_IO */
   return res;
@@ -56,11 +61,11 @@ FILE *check_fopen(char *filename, char *mode) {
 FILE *check_popen(char *command, char *mode) {
   FILE *res = popen(command, mode);
   if (res == NULL) {
-    fprintf(stderr, "[Error] Failed to start command %s!\n", command);
-    exit(1);
+    fprintf(SL, "[Error] Failed to start command %s!\n", command);
+    exit(EXIT_FAILURE);
   }
 #ifdef DEBUG_IO
-  fprintf(stderr, "[Note] Opened command %s with mode '%s' in fileno %d.\n", 
+  fprintf(SL, "[Note] Opened command %s with mode '%s' in fileno %d.\n", 
 	  command, mode, fileno(res));
 #endif /* DEBUG_IO */
   return res;
@@ -88,11 +93,11 @@ FILE *check_rw_socket(char *command, pid_t *pid) {
     wres = waitpid(*pid, &status, WNOHANG);
   } while ((wres < 0) && (errno == EINTR));
   if (wres < 0) {
-    fprintf(stderr, "[Error] Failed to start child process: %s\n", command);
-    exit(1);
+    fprintf(SL, "[Error] Failed to start child process: %s\n", command);
+    exit(EXIT_FAILURE);
   }
 #ifdef DEBUG_IO
-  fprintf(stderr, "[Note] Started command %s with mode 'r+' in fileno %d.\n", 
+  fprintf(SL, "[Note] Started command %s with mode 'r+' in fileno %d.\n", 
 	  command, fileno(res));
 #endif /* DEBUG_IO */
   return res;
@@ -101,9 +106,9 @@ FILE *check_rw_socket(char *command, pid_t *pid) {
 void check_lseek(int fd, off_t offset, int whence) {
   int64_t res = lseek(fd, offset, whence);
   if (res<0) {
-    fprintf(stderr, "[Error] Lseek error in fileno %d: ", fd);
-    perror(NULL);
-    exit(1);
+    fprintf(SL, "[Error] Lseek error in fileno %d: ", fd);
+    fprintf(SL, "[Error] Reason: %s\n", strerror(errno));
+    exit(EXIT_FAILURE);
   }
 }
 
@@ -117,8 +122,8 @@ void *check_realloc(void *ptr, size_t size, char *reason) {
   if (size > 0) {
     void *res = realloc(ptr, size);
     if (res == NULL) {
-      fprintf(stderr, "[Error] Failed to allocate memory (%s)!\n", reason);
-      exit(1);
+      fprintf(SL, "[Error] Failed to allocate memory (%s)!\n", reason);
+      exit(EXIT_FAILURE);
     }
     return res;
   }
@@ -132,22 +137,22 @@ void _io_err(int rw, size_t size, size_t nitems, FILE *stream) {
   char *dir = (rw) ? "to" : "from";
   char *items = (nitems == 1) ? "item" : "items";
 
-  fprintf(stderr, "[Error] Failed to %s %"PRIu64" %s of size "
+  fprintf(SL, "[Error] Failed to %s %"PRIu64" %s of size "
 	  "%"PRIu64" bytes %s fileno %d!\n", 
 	  verb, (uint64_t)nitems, items, (uint64_t)size, dir, fileno(stream));
   if (feof(stream))
-    fprintf(stderr, "[Error] Reason: end of file (offset %"PRIu64").\n",
+    fprintf(SL, "[Error] Reason: end of file (offset %"PRIu64").\n",
 	    (uint64_t)ftello(stream));
   else
-    perror("[Error] Reason");
-  exit(1);
+    fprintf(SL, "[Error] Reason: %s\n", strerror(errno));
+  exit(EXIT_FAILURE);
 }
 
 void check_fseeko(FILE *stream, off_t offset, int whence) {
   if (fseeko(stream, offset, whence) < 0) {
-    fprintf(stderr, "[Error] Seek error in fileno %d: ", fileno(stream));
-    perror(NULL);
-    exit(1);
+    fprintf(SL, "[Error] Seek error in fileno %d: ", fileno(stream));
+    fprintf(SL, "[Error] Reason: %s\n", strerror(errno));
+    exit(EXIT_FAILURE);
   }
 }
 
@@ -163,8 +168,8 @@ void check_fskip(FILE *stream, off_t offset, char *buffer, size_t buf_size) {
 
 void check_limited_funread(void *ptr, size_t size, size_t nitems) {
   if (unread_size) {
-    fprintf(stderr, "[Error] Tried to unread twice in a row\n");
-    exit(1);
+    fprintf(SL, "[Error] Tried to unread twice in a row\n");
+    exit(EXIT_FAILURE);
   }
   check_realloc_s(unread, size, nitems);
   unread_size = size*nitems;
@@ -175,8 +180,8 @@ size_t check_fread(void *ptr, size_t size, size_t nitems, FILE *stream) {
   size_t res = 1, nread = 0;
   if (unread_size) {
     if (unread_size != (size*nitems)) {
-      fprintf(stderr, "[Error] funread must be followed by identical fread!\n");
-      exit(1);
+      fprintf(SL, "[Error] funread must be followed by identical fread!\n");
+      exit(EXIT_FAILURE);
     }
     memcpy(ptr, unread, unread_size);
     check_realloc_s(unread, 0, 0);
@@ -220,22 +225,47 @@ void *check_mmap_file(char *filename, char mode, int64_t *length) {
     prot |= PROT_WRITE;
   }
   else {
-    fprintf(stderr, "[Error] Invalid mode %c passed to check_mmap_file!\n", mode);
-    exit(1);
+    fprintf(SL, "[Error] Invalid mode %c passed to check_mmap_file!\n", mode);
+    exit(EXIT_FAILURE);
   }
   int fd = fileno(tf);
   if (fstat(fd, &ts)!=0) {
-    fprintf(stderr, "[Error] Fstat failure on file %s!\n", filename);
-    perror("[Error] Reason");
-    exit(1);
+    fprintf(SL, "[Error] Fstat failure on file %s!\n", filename);
+    fprintf(SL, "[Error] Reason: %s\n", strerror(errno));
+    exit(EXIT_FAILURE);
   }
-  void *res = mmap(NULL, ts.st_size, prot, flags, fd, 0);
-  if (res == MAP_FAILED) {
-    fprintf(stderr, "[Error] Mmap failure on file %s, mode %c!\n", filename, mode);
-    perror("[Error] Reason");
-    exit(1);
+
+  void *res = NULL;
+  if (ts.st_size > 0) {
+    res = mmap(NULL, ts.st_size, prot, flags, fd, 0);
+    if (res == MAP_FAILED) {
+      fprintf(SL, "[Error] Mmap failure on file %s, mode %c!\n", filename, mode);
+      fprintf(SL, "[Error] Reason: %s\n", strerror(errno));
+      exit(EXIT_FAILURE);
+    }
   }
   fclose(tf);
   if (length) *length = ts.st_size;
   return res;
+}
+
+#ifndef MAP_ANONYMOUS
+#define MAP_ANONYMOUS MAP_ANON
+#endif /* MAP_ANONYMOUS */
+
+void *check_mmap_memory(int64_t length) {
+  int flags = MAP_SHARED | MAP_ANONYMOUS, prot = PROT_READ | PROT_WRITE;
+  void *res = mmap(NULL, length, prot, flags, -1, 0);
+  if (res == MAP_FAILED) {
+    fprintf(SL, "[Error] Mmap failure to allocate %"PRId64" bytes of memory!\n", length);
+    fprintf(SL, "[Error] Reason: %s\n", strerror(errno));
+    exit(EXIT_FAILURE);
+  }
+  return res;
+}
+
+void check_mtrim(void) {
+#ifdef __linux__
+  malloc_trim(0);
+#endif /* __linux__ */
 }
