@@ -73,6 +73,8 @@ string(OUTPUT_FORMAT, "BOTH");
 integer(DELETE_BINARY_OUTPUT_AFTER_FINISHED, 0);
 integer(FULL_PARTICLE_CHUNKS, 0);
 string(BGC2_SNAPNAMES, "");
+real(WEAK_LENSING_FRACTION, 0);
+
 
 integer(SHAPE_ITERATIONS, 10);
 integer(WEIGHTED_SHAPES, 1);
