@@ -14,6 +14,7 @@ prof:
 	@make reg EXTRA_FLAGS="$(PROFFLAGS)"
 
 reg:
+	$(CC) $(CFLAGS) calc_bgc2_profiles.c load_bgc2.c ../check_syscalls.c ../io/io_util.c ../distance.c ../rockstar.c ../config_vars.c ../jacobi.c ../fun_times.c ../io/meta_io.c ../io/io_bgc2.c ../io/io_ascii.c ../io/stringparse.c ../io/io_art.c ../io/io_gadget.c ../io/io_tipsy.c ../potential.c ../bounds.c ../client.c ../config.c ../fof.c ../hubble.c ../integrate.c ../interleaving.c ../inthash.c ../merger.c ../nfw.c ../server.c ../subhalo_metric.c ../universe_time.c ../inet/address.c ../inet/rsocket.c ../inet/socket.c ../io/io_generic.c ../io/io_internal.c ../io/read_config.c -o calc_bgc2_profiles  $(EXTRA_FLAGS)
 	$(CC) $(CFLAGS) calc_bgc2_shapes.c load_bgc2.c ../check_syscalls.c ../io/io_util.c ../distance.c ../rockstar.c ../config_vars.c ../jacobi.c ../fun_times.c ../io/meta_io.c ../io/io_bgc2.c ../io/io_ascii.c ../io/stringparse.c ../io/io_art.c ../io/io_gadget.c ../io/io_tipsy.c ../potential.c ../bounds.c ../client.c ../config.c ../fof.c ../hubble.c ../integrate.c ../interleaving.c ../inthash.c ../merger.c ../nfw.c ../server.c ../subhalo_metric.c ../universe_time.c ../inet/address.c ../inet/rsocket.c ../inet/socket.c ../io/io_generic.c ../io/io_internal.c ../io/read_config.c -o calc_bgc2_shapes  $(EXTRA_FLAGS)
 	$(CC) $(CFLAGS) bgc2_to_ascii_particles.c load_bgc2.c ../check_syscalls.c ../io/io_util.c -o bgc2_to_ascii_particles  $(EXTRA_FLAGS)
 	$(CC) -DTEST_LOADFP $(CFLAGS) load_full_particles.c ../check_syscalls.c   ../io/stringparse.c ../config_vars.c -o load_full_particles  $(EXTRA_FLAGS)
