@@ -26,6 +26,7 @@ void add_new_halo(void);
 void alloc_particle_copies(int64_t total_copies);
 void norm_sd(struct fof *f, float thresh);
 float find_median_r(float *rad, int64_t num_p, float frac);
+float random_unit(void);
 
 void find_sd(struct particle *particles, int64_t n, double *sig_x, double *sig_v);
 #endif /* GROUPIES_H */
