@@ -7,7 +7,7 @@
 \begin{document}
 \vspace{-1ex}
 \noindent{}The Rockstar Halo Finder\\
-\noindent{}Most code: Copyright \textcopyright{}2011-2014 Peter Behroozi\\
+\noindent{}Most code: Copyright \textcopyright{}2011-2016 Peter Behroozi\\
 \noindent{}License: GNU GPLv3\\
 \noindent{}Science/Documentation Paper: \url{http://arxiv.org/abs/1110.4372}\\
 
@@ -230,7 +230,7 @@ Information about each of the columns in both file types (including units) is av
       compile, run ``\texttt{make parents}'' from the Rockstar source directory.  Then,
       run the following command
 \begin{verbatim}
-      	  /path/to/rockstar/util/find_parents <box_size> out_XYZ.list
+      	  /path/to/rockstar/util/find_parents out_XYZ.list <box_size>
 \end{verbatim}
       on each halo catalog for which you want to find host halos.  Information
       about which halos are hosts and which are subs will be output as an
