@@ -10,6 +10,7 @@
 #define EXTRA_HALO_INFO int64_t descid, np; \
   float alt_m[4], J[3], spin, bullock_spin, Xoff, Voff, \
     b_to_a, c_to_a, A[3], klypin_rs, kin_to_pot, m_all, m_pe_b, m_pe_d, \
+    b_to_a2, c_to_a2, A2[3], \
     halfmass_radius;
 #include "read_tree.h"
 
@@ -33,7 +34,7 @@ void read_hlist(char *filename) {
   char buffer[1024];
 
   SHORT_PARSETYPE;
-  #define NUM_INPUTS 36
+  #define NUM_INPUTS 41
   enum short_parsetype stypes[NUM_INPUTS] = 
     { D64, D64, F, F, F,  //  #id desc_id mvir vmax vrms
       F, F, D64, F,       //  Rvir Rs Np x 
@@ -41,7 +42,8 @@ void read_hlist(char *filename) {
       F, F, F, F, F,      // JX JY JZ Spin rs_klypin
       F, F, F, F, F,      // M_all M1 M2 M3 M4
       F, F, F, F, F,      // Xoff Voff spin_bullock b_to_a c_to_a 
-      F, F, F, F, F,      // A[x] A[y] A[z] T/|U| M_PE_Behroozi
+      F, F, F, F, F,      // A[x] A[y] A[z] b_to_a500 c_to_a500
+      F, F, F, F, F,      //  A2[x] A2[y] A2[z] T/|U| M_PE_Behroozi
       F, F                //M_PE_Diemer Halfmass_Radius
     };
   enum parsetype types[NUM_INPUTS];
@@ -56,7 +58,9 @@ void read_hlist(char *filename) {
 			    &(h.alt_m[1]), &(h.alt_m[2]), &(h.alt_m[3]),
 			    &(h.Xoff), &(h.Voff), &(h.bullock_spin), 
 			    &(h.b_to_a), &(h.c_to_a), &(h.A[0]), 
-                            &(h.A[1]), &(h.A[2]), &(h.kin_to_pot),
+                            &(h.A[1]), &(h.A[2]), &(h.b_to_a2), &(h.c_to_a2),
+                            &(h.A2[0]), &(h.A2[1]), &(h.A2[2]),
+                            &(h.kin_to_pot),
                             &(h.m_pe_b), &(h.m_pe_d), &(h.halfmass_radius)};
   
 
@@ -92,13 +96,14 @@ void read_hlist(char *filename) {
 
   for (n=0; n<all_halos.num_halos; n++) {
     struct halo *th = all_halos.halos + n;
-    printf("%"PRId64" %"PRId64" %.3e %.2f %.2f %.3f %.3f %"PRId64" %.5f %.5f %.5f %.2f %.2f %.2f %.3e %.3e %.3e %.5f %.5f %.4e %.4e %.4e %.4e %.4e %.5f %.2f %.5f %.5f %.5f %.5f %.5f %.5f %.4f %.3e %.3e %.3f %"PRId64"\n",
+    printf("%"PRId64" %"PRId64" %.3e %.2f %.2f %.3f %.3f %"PRId64" %.5f %.5f %.5f %.2f %.2f %.2f %.3e %.3e %.3e %.5f %.5f %.4e %.4e %.4e %.4e %.4e %.5f %.2f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.5f %.4f %.3e %.3e %.3f %"PRId64"\n",
 	   th->id, th->descid, th->mvir, th->vmax, th->vrms, th->rvir, th->rs,
 	   th->np, th->pos[0], th->pos[1], th->pos[2], th->vel[0], th->vel[1],
 	   th->vel[2], th->J[0], th->J[1], th->J[2], th->spin,
 	   th->klypin_rs, th->m_all, th->alt_m[0], th->alt_m[1], th->alt_m[2],
 	   th->alt_m[3], th->Xoff, th->Voff, th->bullock_spin, th->b_to_a,
-	   th->c_to_a, th->A[0], th->A[1], th->A[2], th->kin_to_pot, 
+	   th->c_to_a, th->A[0], th->A[1], th->A[2], th->b_to_a2, th->c_to_a2,
+           th->A2[0], th->A2[1], th->A2[2], th->kin_to_pot, 
            th->m_pe_b, th->m_pe_d, th->halfmass_radius, th->pid);
   }
 }
@@ -106,7 +111,7 @@ void read_hlist(char *filename) {
 int main(int argc, char **argv)
 {
   if (argc < 2) {
-    printf("Usage: %s hlist box_size\n", argv[0]);
+    printf("Usage: %s out_XYZ.list box_size\n", argv[0]);
     exit(1);
   }
   if (argc > 2) BOX_SIZE = atof(argv[2]);
